# BinaryClock

./: .gitignore  .travis.yml  README.md  appveyor.yml
binaryClock/: binaryClock.ino  binaryClock.sln  binaryClock.vcxproj  binaryClock.vcxproj.filters
binaryClock/source/: CMakeLists.txt  main.cpp
